--- a/GRU_APPLE/GRU APPLE.ipynb
+++ b/GRU_APPLE/GRU APPLE.ipynb
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd18ecfe",
+   "id": "0872766e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,17 +62,7 @@
     "batchSize = 64 # 32 \"64\" 256\n",
     "dataSize = 10 # 5 \"10\" 40\n",
     "optimizer = \"adam\" # \"adam\" sgd\n",
-    "patience = 30 # 10 \"30\" 50\n",
-    "\n",
-    "depth = \"DoubleGRU\" \n",
-    "hiddenState = 16\n",
-    "timeStep = 40\n",
-    "activation = \"tanh\"\n",
-    "epochs = 100\n",
-    "batchSize = 32\n",
-    "dataSize = 40\n",
-    "optimizer = \"adam\"\n",
-    "patience = 100"
+    "patience = 30 # 10 \"30\" 50"
    ]
   },
   {
@@ -1141,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2f59b62e",
+   "id": "b122d5f3",
    "metadata": {},
    "outputs": [
     {
